namespaces/live.cloud-platform.service.justice.gov.uk/laa-data-user-api-dev/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-data-user-api-dev"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "development"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-silas-idam-tech"
    cloud-platform.justice.gov.uk/application: "LAA User Data API"
    cloud-platform.justice.gov.uk/owner: "SiLAS: ben.ashton@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-data-user-api"
    cloud-platform.justice.gov.uk/team-name: "laa-portal-stabilisation-tech"
    cloud-platform.justice.gov.uk/review-after: ""
